--- a/myHomework/style.css
+++ b/myHomework/style.css
@@ -9,20 +9,21 @@ body, html {
 }
 
 #bgVideo {
-    position: fixed;
+    position: fixed; /* Changed from absolute to fixed to keep the video in place even on scroll */
     top: 50%;
     left: 50%;
     min-width: 100%;
     min-height: 100%;
     width: auto;
     height: auto;
-    z-index: -1;
+    z-index: -100;
     transform: translateX(-50%) translateY(-50%);
     background-size: cover;
     overflow: hidden;
+    transition: 1s opacity;
 }
 
-p {
-    z-index: 1;
-    color: white;
+.content {
+    z-index: 100;
+    color: white; /* If you want the text to be white */
 }
