--- a/myHomework/style.css
+++ b/myHomework/style.css
@@ -1,5 +1,5 @@
 body, html {
-    height: 70%;
+    height: 100%;
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     display: grid;
@@ -9,18 +9,18 @@ body, html {
 }
 
 #bgVideo {
-    width: 70%; /* Adjust as needed */
-    height: auto; /* Keeps aspect ratio */
+    width: 30%; 
+    height: auto; 
     display: block;
     margin-left: auto;
     margin-right: auto;
-    position: relative; /* Centering the video vertically */
+    position: relative;
     top: 50%;
     transform: translateY(-50%);
 }
 
 body {
-    overflow: hidden; /* To hide vertical scroll caused by vertical centering */
+    overflow: hidden; 
 }
 
 .content {
